# sentiric-llm-local-service

./: .gitignore  Dockerfile  Dockerfile.converter  Dockerfile.gpu  LOGIC.md  README.md  SPECIFICATION.md  TESTING.md  docker-compose.cpu.yml  docker-compose.gpu.yml  grpc_test_client.py  pyproject.toml  requirements.converter.txt  requirements.gpu.txt  requirements.txt
.github/workflows/: docker-cpu.yml  docker-gpu.yml
app/: main.py  runner.py
app/core/: config.py  logging.py
app/services/: grpc_server.py  llm_engine.py  llm_service.py
scripts/: convert_model.py
