[project]
name = "sentiric-llm-local-service"
version = "0.1.0"
description = "Expert Local LLM service for the Sentiric ecosystem"
authors = [{name = "Sentiric Team"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "ctranslate2==4.3.1",
    "transformers>=4.38.0",
    "pydantic-settings==2.4.0",
    "structlog==23.3.0",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "sentiric-contracts-py @ git+https://github.com/sentiric/sentiric-contracts.git@v1.9.5",
    "prometheus-client==0.20.0",
    "prometheus-fastapi-instrumentator==6.0.0"
]